02-infrastructure/nginx-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-lb
  namespace: diploma-project
spec:
  type: LoadBalancer
  selector:
    app: nginx-demo
  ports:
  - port: 80
    targetPort: 80
