02-infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-svc
  namespace: diploma-project
spec:
  type: ClusterIP
  selector:
    app: nginx-demo
  ports:
  - port: 80
    targetPort: 80
